Fix normlized query out of alignment (css)
Fix for unaligned normlized query when performing url search

--- a/src/js/src/assets/styles/search.scss
+++ b/src/js/src/assets/styles/search.scss
@@ -658,7 +658,7 @@ img.imageEntry.noPointer {
   max-width:500px;
   text-transform: none;
   color: rgba(0,46,112,0.7);
-  line-height:12px;  
+  vertical-align: bottom;
 
 }
 
